2008-01-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/encoders/flv/Makefile.am:
	* flumotion/component/encoders/flv/flv-wizard.glade:
	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/flv/vp6-wizard.glade:
	* flumotion/component/encoders/flv/vp6.py:
	* flumotion/component/encoders/flv/vp6_wizard.py:
	* flumotion/component/encoders/mp3/Makefile.am:
	* flumotion/component/encoders/mp3/mp3.xml:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	* flumotion/component/muxers/flv/flv.xml:

	Add initial flv, mp3 and vp6 encoders and flx muxer wizard support

2007-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/Makefile.am:
	  Set TRIAL_ENV to make testsuite work again.

2007-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.py:
	  Also specify sample rate on the src pad of lame; we don't want
	  lame to resample for us, it's annoying when we want to respect
	  the allowed Flash sample rates.

2007-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.py:
	  Bitrate should be specified in bit/sec.
	  Add a warning message if it is specified wrongly so admins
	  can fix their config, but still accept it for now.

2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/flv.py: Stupid me !
	Fix Flash 7.

2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/vp6.py: We need to chain
	up in do_setup. Thanks Mike ;-)

2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/flv.xml: Rename the property
	to please thomasvs.
	* flumotion/component/encoders/flv/vp6.py: Check for the 
	encoder state configuration file in do_setup.

2007-04-03  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/flv/Makefile.am:
	* flumotion/component/encoders/flv/flv.py: